--- a/inde.html
+++ b/inde.html
@@ -21,6 +21,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134883838-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-134883838-1');
+</script>
+
+<!-- /Google Analytics -->
+
+
   <section class="header1 cid-riEkKRuGDH mbr-parallax-background" id="header1-2">
 
     
@@ -35,7 +50,7 @@
                     Aoife Sheehan</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
                     Web Designer</h3>
-                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">Welcome to the portfolio</p>
+                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">Welcome to my portfolio</p>
                 
             </div>
         </div>
