--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-black display-5" href="index.html#features3-5">Portifolio</a>
-                </li></ul>
+                    <a class="nav-link link text-black display-5" href="https://aoifeellen.github.io/smooth-smoothies/index.html">Smooth Smoothies</a>
+                </li><li class="nav-item"><a class="nav-link link text-black display-5" href="index.html#features3-5">All the light</a></li><li class="nav-item"><a class="nav-link link text-black display-5" href="https://aoifeellen.github.io/careers-summit/">Career Summit</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#info2-8"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>
                     
                     Contact me&nbsp;</a></div>
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="header1 cid-rjjr3ekGlN mbr-parallax-background" id="header1-3">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header1 cid-rjjr3ekGlN mbr-parallax-background" id="header1-3">
 
     
 
